<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.kuali.kra</groupId>
	<artifactId>kra_project</artifactId>
	<packaging>war</packaging>
	<name>KRA Project</name>
	<version>SNAPSHOT-0.1</version>
	<url>http://kuali.org</url>
	<build>
		<testOutputDirectory>target/test-classes</testOutputDirectory>
	</build>
	<profiles>
		<profile>
			<id>war</id>
			<activation>
				<property>
					<name>war</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<resources>
					<resource>
						<filtering>true</filtering>
						<directory>${basedir}/src/main/resources</directory>
						<includes>
							<include>META-INF/kra-config.xml</include>
						</includes>
					</resource>
					<resource>
						<directory>${basedir}/src/main/resources</directory>
						<excludes>
							<exclude>kra-config.xml</exclude> 
						</excludes>
					</resource>
					<!-- 
					<resource>
						<filtering>true</filtering>
						<directory>${basedir}/src/main/resources</directory>
						<includes>
							<include>soap_server.properties</include>
						</includes>
					</resource>
					 -->
				</resources>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>1.5</source>
							<target>1.5</target>
						</configuration>
					</plugin>
					<plugin>
    					<artifactId>maven-resources-plugin</artifactId>
    					<version>2.2</version>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
					<version>2.4</version>
					<scope>provided</scope>
				</dependency>
				<!--  maybe the cause for Jack's compiling error
				<dependency>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
					<version>2.3</version>
					<scope>provided</scope>
				</dependency>
				-->
				<dependency>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty</artifactId>
					<version>6.1.1</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>tomcat</groupId>
					<artifactId>jasper-compiler</artifactId>
					<version>5.5.15</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>tomcat</groupId>
					<artifactId>jasper-runtime</artifactId>
					<version>5.5.15</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>tomcat</groupId>
					<artifactId>jasper-compiler-jdt</artifactId>
					<version>5.5.15</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.activemq</groupId>
					<artifactId>activemq-core</artifactId>
					<version>4.1.1</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.derby</groupId>
					<artifactId>derby</artifactId>
					<version>10.2.2.0</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.kuali.rice</groupId>
					<artifactId>rice-kns</artifactId>
					<version>0.9.3-kra-SNAPSHOT</version>
					<exclusions>
						<exclusion>
							<groupId>junit</groupId>
							<artifactId>junit</artifactId>
						</exclusion>
						<exclusion>
							<groupId>htmlunit</groupId>
							<artifactId>htmlunit</artifactId>
						</exclusion>
						<exclusion>
							<groupId>jmock</groupId>
							<artifactId>jmock</artifactId>
						</exclusion>
						<exclusion>
							<groupId>nekohtml</groupId>
							<artifactId>nekohtml</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.apache.activemq</groupId>
							<artifactId>activemq-core</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.apache.derby</groupId>
							<artifactId>derby</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.springframework</groupId>
							<artifactId>spring-mock</artifactId>
						</exclusion>
						<exclusion>
							<groupId>itext</groupId>
							<artifactId>itext</artifactId>
						</exclusion>
						<exclusion>
							<groupId>com.oracle</groupId>
							<artifactId>ojdbc14</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.kuali.rice</groupId>
							<artifactId>rice-testharness</artifactId>
						</exclusion>
						<exclusion>
							<groupId>javax.resource</groupId>
							<artifactId>connector</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>axis</groupId>
					<artifactId>axis</artifactId>
					<version>1.4</version>
				</dependency>
				<dependency>
					<groupId>fop</groupId>
					<artifactId>fop</artifactId>
					<version>0.20.5</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>gg_forms_jaxb</artifactId>
					<version>1.0.1</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>kra_s2s</artifactId>
					<version>1.0.13</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>propdev-schema-v2</artifactId>
					<version>1.2</version>
 				</dependency>  
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>hyperjaxb</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-impl</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-libs</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-verification</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-xjc</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxrpc</groupId>
					<artifactId>jaxrpc</artifactId>
					<version>1.1.3</version>
				</dependency>
				<dependency>
					<groupId>relaxng</groupId>
					<artifactId>relaxngDatatype</artifactId>
					<version>0.0.1</version>
				</dependency>
				<dependency>
					<groupId>soap</groupId>
					<artifactId>soap</artifactId>
					<version>1.1</version>
 				</dependency>
 				<dependency>
					<groupId>jax-qname</groupId>
					<artifactId>jax-qname</artifactId>
					<version>1.1</version>
				</dependency>
				<dependency>
 					<groupId>jaxrpc</groupId>
 					<artifactId>jaxrpc</artifactId>
 					<version>1.1.3</version>
 				</dependency>
 				<dependency>
					<groupId>namespace</groupId>
					<artifactId>namespace</artifactId>
					<version>1.0.1</version>
				</dependency>
				<dependency>
					<groupId>xsdlib</groupId>
					<artifactId>xsdlib</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>avalon-framework</groupId>
					<artifactId>avalon-framework</artifactId>
					<version>4.1.2</version>
				</dependency>
				<dependency>
					<groupId>batik</groupId>
					<artifactId>batik</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>com.lowagie</groupId>
					<artifactId>iText</artifactId>
					<version>2.1.2</version>
				</dependency>
				<dependency>
  					<groupId>org.jmock</groupId>
  					<artifactId>jmock-junit4</artifactId>
  					<version>2.5.0</version>
  					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<!-- 
				<resources>
					<resource>
						<filtering>true</filtering>
						<directory>${basedir}/src/main/resources</directory>
						<includes>
							<include>soap_server.properties</include>
						</includes>
					</resource>
				</resources>
				 -->
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>1.5</source>
							<target>1.5</target>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.3.1</version>
						<configuration>
							<useFile>false</useFile>
							<testFailureIgnore>true</testFailureIgnore>
							<includes>
								<include>**/*Test.java</include>
							</includes>
							<excludes><exclude></exclude></excludes>
							<forkMode>once</forkMode>
							<reportFormat>plain</reportFormat>
							<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
						</configuration>
					</plugin>
					<plugin>
    					<artifactId>maven-resources-plugin</artifactId>
    					<version>2.2</version>
					</plugin>
					<plugin>
						<groupId>com.atlassian.maven.plugins</groupId>
						<artifactId>maven-clover2-plugin</artifactId>
						<executions>
							<execution>
								<phase>pre-site</phase>
								<goals>
									<goal>instrument</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<jdk>1.5</jdk>
							<generatePdf>true</generatePdf>
                            <excludes>
                                <exclude>**/*Test/java</exclude>
                            </excludes>
							<licenseLocation>/opt/sa_forms/java/unt/kra/clover.license</licenseLocation>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.kuali.rice</groupId>
					<artifactId>rice-kns</artifactId>
					<version>0.9.3-kra-SNAPSHOT</version>
					<exclusions>
						<exclusion>
							<groupId>itext</groupId>
							<artifactId>itext</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>htmlunit</groupId>
					<artifactId>htmlunit</artifactId>
					<version>1.13</version>
					<exclusions>
						<exclusion>
							<artifactId>servlet-api</artifactId>
							<groupId>javax.servlet</groupId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>axis</groupId>
					<artifactId>axis</artifactId>
					<version>1.4</version>
				</dependency>
				<dependency>
					<groupId>fop</groupId>
					<artifactId>fop</artifactId>
					<version>0.20.5</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>gg_forms_jaxb</artifactId>
					<version>1.0.1</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>kra_s2s</artifactId>
					<version>1.0.13</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>hyperjaxb</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-impl</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-libs</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-verification</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-xjc</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxrpc</groupId>
					<artifactId>jaxrpc</artifactId>
					<version>1.1.3</version>
				</dependency>
				<dependency>
					<groupId>relaxng</groupId>
					<artifactId>relaxngDatatype</artifactId>
					<version>0.0.1</version>
				</dependency>
				<dependency>
					<groupId>soap</groupId>
					<artifactId>soap</artifactId>
					<version>1.1</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>propdev-schema-v2</artifactId>
					<version>1.2</version>
 				</dependency>
 				<dependency>
					<groupId>jax-qname</groupId>
					<artifactId>jax-qname</artifactId>
					<version>1.1</version>
				</dependency>
				<dependency>
 					<groupId>jaxrpc</groupId>
 					<artifactId>jaxrpc</artifactId>
 					<version>1.1.3</version>
 				</dependency>
 				<dependency>
					<groupId>namespace</groupId>
					<artifactId>namespace</artifactId>
					<version>1.0.1</version>
				</dependency>
				<dependency>
					<groupId>xsdlib</groupId>
					<artifactId>xsdlib</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>avalon-framework</groupId>
					<artifactId>avalon-framework</artifactId>
					<version>4.1.2</version>
				</dependency>
				<dependency>
					<groupId>batik</groupId>
					<artifactId>batik</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>com.lowagie</groupId>
					<artifactId>iText</artifactId>
					<version>2.1.2</version>
				</dependency>
				<dependency>
  					<groupId>org.jmock</groupId>
  					<artifactId>jmock-junit4</artifactId>
  					<version>2.5.0</version>
  					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
	<repositories>
		<repository>
			<id>connector</id>
			<name>Connector</name>
			<url>http://julien.dubois.free.fr/maven2/</url>
		</repository>
		<repository>
			<id>kuali</id>
			<name>Kuali Repository</name>
			<url>https://test.kuali.org/maven</url>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
		<repository>
			<id>codehaus</id>
			<name>Codehaus</name>
			<url>http://dist.codehaus.org</url>
		</repository>
	</repositories>
	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-report-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>com.atlassian.maven.plugins</groupId>
				<artifactId>maven-clover2-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>
</project>
